infra/livekit/production/post-render/signaling-service.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: livekit-server
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
