infra/livekit/production/post-render/ingress.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: livekit-server
spec:
  tls: null
